@@ -16,6 +16,7 @@ BeeBEEP 3.0.8
 - Fixed a bug in emoticon parsing
 - Hive protocol optimized
 - Fixed a bug in opening url with diacritic characters in path
+- Preset Messages
 
 BeeBEEP 3.0.7
 - ShareBox: new feature in beta (can share files like dropbox with all users connected)
